Add answers from Fall 2022

--- a/index.html
+++ b/index.html
@@ -231,6 +231,42 @@ title: "Something Unique"
 
 <p>My grandpa was in the Marines and got stationed in Japan, where he met my grandma. My grandpa didn't know any Japanese and my grandma didn't know any English, so it is beyond me how they communicated.</p>
 
+<hr>
+
+<p>I've been working on music for the past 5 or so years in a band with a couple of friends. We've been soundtracked in art films and have all of our music on different streaming services.</p>
+
+<hr>
+
+<p>Something unique about me is that I really enjoy cooking and baking, whether it's new recipies or traditional Mexican food for myself and others.</p>
+
+<hr>
+
+<p>I like to design and draw clothes. One of my dreams is to create a runway show.</p>
+
+<hr>
+
+<p>I am able to learn to do a lot of things quickly. In one hour I was able to learn how to sow and knit. I also know how to do acrylic nails and make up in a very short time. I learned how to change a tire and fix scratches on cars. Unfortunately, I also lose interest in things very easilly.</p>
+
+<hr>
+
+<p>I served in the Coast Guard for 12 years. I worked during drug interceptor boats and traveled all across South America. At 30 years old I am nervous about going back to school.</p>
+
+<hr>
+
+<p>I used to work for the Oakland A's as a usher.</p>
+
+<hr>
+
+<p>I got rid of and changed the mascot at my high school. My friends and I believed that our old mascot was disrespectful, so over the course of a year and a half we were able to change it.</p>
+
+<hr>
+
+<p>I was born and raised in Georgia. I am 31 years old, retired from the Army. I moved to California because I love nature and I want to hike all of its 9 national parks.</p>
+
+<hr>
+
+<p>I dropped out of school when I was 14. I didn't go to high school, so I haven't been in a school setting since then. I obtained my GED over the summer. I have mental and behavioral problems that held me back in my teens but am getting treatment now and goind much better.</p>
+
 </div>
 
 
