Fix typos for Fall 2022

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ title: "Something Unique"
 
 <hr>
 
-<p>Something unique about me is that I really enjoy cooking and baking, whether it's new recipies or traditional Mexican food for myself and others.</p>
+<p>I really enjoy cooking and baking, whether it's new recipies or traditional Mexican food for myself and others.</p>
 
 <hr>
 
@@ -245,11 +245,11 @@ title: "Something Unique"
 
 <hr>
 
-<p>I am able to learn to do a lot of things quickly. In one hour I was able to learn how to sow and knit. I also know how to do acrylic nails and make up in a very short time. I learned how to change a tire and fix scratches on cars. Unfortunately, I also lose interest in things very easilly.</p>
+<p>I am able to learn to do a lot of things quickly. In one hour I was able to learn how to sow and knit. I also learned how to do acrylic nails and make up in a very short time. I learned how to change a tire and fix scratches on cars. Unfortunately, I also lose interest in things very easilly.</p>
 
 <hr>
 
-<p>I served in the Coast Guard for 12 years. I worked during drug interceptor boats and traveled all across South America. At 30 years old I am nervous about going back to school.</p>
+<p>I served in the Coast Guard for 12 years. I worked on drug interceptor boats and traveled all across South America. At 30 years old I am nervous about going back to school.</p>
 
 <hr>
 
@@ -265,7 +265,7 @@ title: "Something Unique"
 
 <hr>
 
-<p>I dropped out of school when I was 14. I didn't go to high school, so I haven't been in a school setting since then. I obtained my GED over the summer. I have mental and behavioral problems that held me back in my teens but am getting treatment now and goind much better.</p>
+<p>I dropped out of school when I was 14. I didn't go to high school, so I haven't been in a school setting since then. I obtained my GED over the summer. I have mental and behavioral problems that held me back in my teens but am getting treatment now and doing much better.</p>
 
 </div>
 
