Add more content

--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@ title: "Something Unique"
 
 <hr>
 
+<p>I played a lot of sports. I was a gymnast for 5 years, swimmer for 7 years, played tennis for 3 years, soccer for 9 years, and jiu jitsu for 3 years.</p>
+
+<hr>
+
+<p>I've played tennis for the past 6 years and in every tournament that I've played at I've been the only latina girl.</p>
+
+<hr>
+
 <p>Some years ago I damaged my spinal cord while scuba diving off the coast in Southern California. I have what continues to appear to be permeant neuropathy on my left side. It's become a part of life, but some days it weighs heavier than others.</p>
 
 <hr>
@@ -217,6 +225,10 @@ title: "Something Unique"
 
 <hr>
 
+<p>I worked on the set of a movie a couple of years ago and that's when I decided to pursue my love of film and television as a career.</p>
+
+<hr>
+
 <p>Something unique about myself is I speak a Guatemalan dialect (Qyol Mam) not many kids my age can speak it anymore so I think it's pretty unique that I can speak it perfectly.</p>
 
 <hr>
@@ -245,6 +257,10 @@ title: "Something Unique"
 
 <hr>
 
+<p>I was a burlesque performer for a few years before I went back to school. I made my own costumes and came up with my own choreography. I am very passionate about it.</p>
+
+<hr>
+
 <p>I am able to learn to do a lot of things quickly. In one hour I was able to learn how to sow and knit. I also learned how to do acrylic nails and make up in a very short time. I learned how to change a tire and fix scratches on cars. Unfortunately, I also lose interest in things very easilly.</p>
 
 <hr>
@@ -266,6 +282,30 @@ title: "Something Unique"
 <hr>
 
 <p>I dropped out of school when I was 14. I didn't go to high school, so I haven't been in a school setting since then. I obtained my GED over the summer. I have mental and behavioral problems that held me back in my teens but am getting treatment now and doing much better.</p>
+
+<hr>
+
+<p>I've had a learning disability since 2nd grade and I think because of it I have a really huge sense of humor, to kinda compensate for my disability.</p>
+
+<hr>
+
+<p>I grew up in a small town in Montana about an hour away from Yellowstone national park. I am used to being close to nature. City life is a big change.</p>
+
+<hr>
+
+<p>I moved to Southwest Wisconsin for a year because I met my boyfriend while visiting my close friend who I shared I a bunk bed with at a summer program in my home state.</p>
+
+<hr>
+
+<p>My family is from Brasil. When I was younger I hated goign there because I couldn't do much and I got lonely, but now I love it and can't wait to go back.</p>
+
+<hr>
+
+<p>I collect vinyls / records. I have an Audio Technica Lp 120, and I'am always hunting for rare records.</p>
+
+<hr>
+
+<p>I am a writer by passion. A big part of me finishing my degree is so I can have more professional and financial stability in order to continue to write my poetry, write what I hope are many successful novels and be published all over the world.</p>
 
 </div>
 
