--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@ title: "Something Unique"
 <p>I can speak English, French, and Russian and I am a 2nd degree balck belt in Judo. Have competed in junior olympics at 14 years old.</p>
 
 <hr>
+  
+<p>I love reading and due to that love, I taught myself how to read backwards, forwards, diagonally, horizontally, and vertically.</p>
 
+<hr>
+  
 <p>I am a makeup artist. I really enjoy doing special effects makeup on myself.</p>
 
 <hr>
