--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@ title: "Something Unique"
   <p>I am currently a co-owner of a photography company. We specialize in portrait and event photography.</p>
 
   <hr>
+  
+  <p>I make jewelry! I worked at bead/jewelry store for a few years and learned that skill set there. Usually, I make necklaces with wire wrapping techniques. Right now, I love turning small, found objects into interesting pieces.</p>
+
+  <hr>  
 
   <p>I've been part of a student activist group for the last 2 years of high school. We've helped organize sevearl rallies to speak about political topics. This group is what made me interested in my major (politics). I am also ambidextrous.</p>
 
