--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>This is my final college course in almost 10 years; I've spent a lot of time attempting to develop myself and interests. My ultimate goal would be to start a multimedia company.</p>
+
+  <hr>
+
   <p>I used to work for the Oakland A's as a usher.</p>
 
   <hr>
