--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I can speak English, French, and Russian and I am a 2nd degree balck belt in Judo. Have competed in junior olympics at 14 years old.</p>
+  <p>I can speak English, French, and Russian and I am a 2nd degree black belt in Judo. Have competed in junior olympics at 14 years old.</p>
 
   <hr>
 
@@ -309,7 +309,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I moved to Southwest Wisconsin for a year because I met my boyfriend while visiting my close friend who I shared I a bunk bed with at a summer program in my home state.</p>
+  <p>I moved to Southwest Wisconsin for a year because I met my boyfriend while visiting my close friend who I shared a bunk bed with at a summer program in my home state.</p>
 
   <hr>
 
