--- a/index.html
+++ b/index.html
@@ -323,6 +323,10 @@ title: "Something Unique"
 
   <p>I am a writer by passion. A big part of me finishing my degree is so I can have more professional and financial stability in order to continue to write my poetry, write what I hope are many successful novels and be published all over the world.</p>
 
+  <hr>
+
+  <p>I enjoy reading and writing fiction about people's day-to-day lives where nothing dramatic or high-stakes happens, and the characters are pretty happy.</p>
+
 </div>
 
 
