--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@ title: "Something Unique"
   <hr>
 
   <p>I am a writer focused on themes of latin American folklore, magical realism & latino social issues.</p>
+  
+  <hr>
+  
+  <p>Something unique about me is that I have been writing in cursive since 3rd grade.</p>
 
   <hr>
 
