--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@ title: "Something Unique"
   <p>Something unique about myself is I speak a Guatemalan dialect (Qyol Mam) not many kids my age can speak it anymore so I think it's pretty unique that I can speak it perfectly.</p>
 
   <hr>
+  
+  <p>I am from a country in the east coast of Africa. It shocks me to see ambulances in the U.S. that actually work; in my home country you have to carry someone to the hospital.</p>
+  
+  <hr>
 
   <p>I decided to move into a camping trailer instead of an apartment to save money and try an affordable method of moving out of my parents home and live independently.</p>
 
