--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@ title: "Something Unique"
   <p>I come from a long line of politicians. My father and grandfather both were involved in politics at a local level, both ran for congress/state assembly. I may minor in political science as it's something that has always interested me.
 
   <hr>
+  
+  <p>My great grandfather was a famous bookmaker and one of his books sunk with the Titanic and it is estimated that the book would be worth over a million dollars.</p>
+  
+  <hr>
 
   <p>At some point in my life I plan on joining the armed forces, maybe the Navy, for just a few years to get the experiences and the feeling that I did my part.</p>
 
