--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I collect vinyls / records. I have an Audio Technica Lp 120, and I'am always hunting for rare records.</p>
+  <p>I collect vinyls & records. I have an Audio Technica Lp 120, and I'm always hunting for rare records.</p>
 
 </div>
 
