--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I am a writer focused on themes of latin American folklore, magical realism & latino social issues.</p>
+  <p>I am a writer focused on themes of latin American folklore, magical realism, and latino social issues.</p>
   
   <hr>
   
