--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>My family is from Brasil. When I was younger I hated goign there because I couldn't do much and I got lonely, but now I love it and can't wait to go back.</p>
+  <p>My family is from Brazil. When I was younger I hated goign there because I couldn't do much and I got lonely, but now I love it and can't wait to go back.</p>
 
   <hr>
 
