--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I come from a long line of politicians. My father and grandfather both were involved in politics at a local level, both ran for congress/state assembly. I may minor in political science as it's something that has always interested me.
+  <p>I come from a long line of politicians. My father and grandfather both were involved in politics at a local level, both ran for congress/state assembly. I may minor in political science as it's something that has always interested me.</p>
 
   <hr>
   
