--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I am able to learn to do a lot of things quickly. In one hour I was able to learn how to sow and knit. I also learned how to do acrylic nails and make up in a very short time. I learned how to change a tire and fix scratches on cars. Unfortunately, I also lose interest in things very easilly.</p>
+  <p>I am able to learn to do a lot of things quickly. In one hour I was able to learn how to sow and knit. I also learned how to do acrylic nails and make up in a very short time. I learned how to change a tire and fix scratches on cars. Unfortunately, I also lose interest in things very easily.</p>
 
   <hr>
 
