--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I wake up at 5:30 / 6:00 am to run at least 2 miles almost daily. I have two dogs, both adopted from the streets. I think people need to drink more water!</p>
+  <p>I wake up at 5:30 / 6:00 am to run at least 2 miles almost daily. I have two dogs, both adopted from the streets. I think people need to drink more water.</p>
 
   <hr>
 
