--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I like cats because I get along with them very well. I don't get along with dogs as much since they are very loud and obnoxious. Cats are more quite and gentle; I actually have four cats.</p>
+
+  <hr>
+
   <p>I like to design and draw clothes. One of my dreams is to create a runway show.</p>
 
   <hr>
