--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>One thing that interests me is exhibits and museums. I find them fascinating. I really like art, it tells us different meanings and histories.</p>
+
+  <hr>
+
   <p>I love swimming. It's more of my hobby but also a place where I go when I'm stressed out or feeling bad.</p>
 
   <hr>
