--- a/index.html
+++ b/index.html
@@ -257,6 +257,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I work part time at Starbucks and really enjoy it. I love my coworkers and the work I do. My go to drink irght now is Chai Latte & brown sugar, vanilla sweet cream cold foam lt ice cinnamon powder on top.</p>
+
+  <hr>
+
   <p>I worked on the set of a movie a couple of years ago and that's when I decided to pursue my love of film and television as a career.</p>
 
   <hr>
