--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I'm a music producer and I've been making beats since I was a little kid. I'm also a photographer; I love cars so I started taking pictures of them.</p>
+
+  <hr>
+
   <p>I went to four different highschools. I started a house cleaning  business with my best friend. I currently support myself by cleaning various homes for cash.</p>
 
   <hr>
@@ -185,7 +189,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I have an Identical twin however, we do not share the same birthday. He was born after midnight, so we each get our own day.</p>
+  <p>I have an identical twin however, we do not share the same birthday. He was born after midnight, so we each get our own day.</p>
 
   <hr>
 
