--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I love music and just anything to do with the music industry in general. I plan on working in either public relations or law in the music industry.</p>
+
+  <hr>
+
   <p>I went to four different highschools. I started a house cleaning  business with my best friend. I currently support myself by cleaning various homes for cash.</p>
 
   <hr>
