--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I love to read. Mainly just romance and young adult books. But I can only read with headphones blasting really loud music or where there is lots of people talking.</p>
+
+  <hr>
+
   <p>I am a makeup artist. I really enjoy doing special effects makeup on myself.</p>
 
   <hr>
