--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I didn't know I had a middle name until 7th grade since my parents never called me by my full name. I eventually found out when I found my baptism invitation.</p>
+
+  <hr>
+
   <p>I enjoy brewing my own beer at home. A coworker taught me how to do this about 8 years ago. It's a lot of work but a very rewarding hobby. My favorite styles to brew are IPA's and stouts.</p>
 
   <hr>
