--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I love video games like "Overwatch" and "Red Dead Redemption", and I hope to get my associate degree in animation and get an internship at some big studio (e.g. Pixar).</p>
+
+  <hr>
+
   <p>I ran three LA Marathons between 8th grade and 12th grade. It was through a program called Students Run LA and it was one of the best experiences of my life.</p>
 
   <hr>
