--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I love to dance. I like dancing because is another way to express yourself and lets you forget about what is happening. Also, it takes you to a different world.</p>
+
+  <hr>
+
   <p>Painting is my hobby. Every time I paint, I feel a sense of calmness and relaxation. My favorite part about painting is seeing one of my visions come to life!</p>
 
   <hr>
