--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I went to four different highschools. I started a house cleaning  business with my best friend. I currently support myself by cleaning various homes for cash.</p>
+  <p>I went to four different highschools. I started a house cleaning business with my best friend. I currently support myself by cleaning various homes for cash.</p>
 
   <hr>
 
@@ -185,15 +185,11 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I love horse back riding. I started riding when I as 11, and it honestly became a form of therapy for me and a positive distraction.</p>
+  <p>I love horse back riding. I started riding when I was 11, and it honestly became a form of therapy for me and a positive distraction.</p>
 
   <hr>
 
   <p>I have had 3 careers so far in life. 1) From 5 years old until 26 years old I worked in my father's restaurant business. 2) Since 18 years old I have worked in the construction business operating my own small business for nearly 20 years. 3) I have been an in-home care taker for 3 different people for a total of 15 years.</p>
-
-  <hr>
-
-  <p>I went to four different highschools. I started a house cleaning  business with my best friend. I currently support myself by cleaning various homes for cash.</p>
 
   <hr>
 
