--- a/index.html
+++ b/index.html
@@ -357,6 +357,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I lived in Thailand when I was 11 years but I'm not Thai. I'm half-filipino, half-white.</p>
+
+  <hr>
+
   <p>I grew up in a small town in Montana about an hour away from Yellowstone national park. I am used to being close to nature. City life is a big change.</p>
 
   <hr>
