--- a/index.html
+++ b/index.html
@@ -373,6 +373,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>My parents are from Mexico City. I've gone there several times to visit family members; I love the culture and food!</p>
+
+  <hr>
+
   <p>I collect vinyls & records. I have an Audio Technica Lp 120, and I'm always hunting for rare records.</p>
 
 </div>
