--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@ title: "Something Unique"
 
   <p>I collect vinyls & records. I have an Audio Technica Lp 120, and I'm always hunting for rare records.</p>
 
+  <hr>
+
+  <p>I am interested in politics, psychology, and public speaking. I also enjoyed video editing and bike riding. I hope to be able to immigrate to Spain one day.</p>
+
 </div>
 
 
