--- a/index.html
+++ b/index.html
@@ -333,6 +333,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I'm a self-defense instructor. More specifically, I'm a Krav Maga instructor. I like Krav Maga because it is a cool way for people to find confidence in themselves.</p>
+
+  <hr>
+
   <p>This is my final college course in almost 10 years; I've spent a lot of time attempting to develop myself and interests. My ultimate goal would be to start a multimedia company.</p>
 
   <hr>
