--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I used to do standup comedy. I went to a standup comedy school in San Francisco.</p>
+
+  <hr>
+
   <p>Painting is my hobby. Every time I paint, I feel a sense of calmness and relaxation. My favorite part about painting is seeing one of my visions come to life!</p>
 
   <hr>
@@ -230,6 +234,10 @@ title: "Something Unique"
   <hr>
 
   <p>I practice a martial art called Eskabo Daan, which is a Filipino martial art. It's allowed me to connect to my culture on a higher plane of spirituality than I've ever experienced before. Eskabo Daan is a compilation of other martial arts such as silat, eskrima, kali, jeet kune do, etc. and is focused on combat self-defense.</p>
+
+  <hr>
+
+  <p>I'm a self-defense instructor. More specifically, I'm a Krav Maga instructor. I like Krav Maga because it is a cool way for people to find confidence in themselves.</p>
 
   <hr>
 
@@ -330,10 +338,6 @@ title: "Something Unique"
   <hr>
 
   <p>I served in the Coast Guard for 12 years. I worked on drug interceptor boats and traveled all across South America. At 30 years old I am nervous about going back to school.</p>
-
-  <hr>
-
-  <p>I'm a self-defense instructor. More specifically, I'm a Krav Maga instructor. I like Krav Maga because it is a cool way for people to find confidence in themselves.</p>
 
   <hr>
 
