--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@ title: "Something Unique"
 
   <hr>
 
+  <p>I studied Hotel Management in my home country, which I didn't like it (I realized too late). I really enjoy art; paintings from the Renaissance to the Cubism period; I enjoyed gardening as well.</p>
+
+  <hr>
+
   <p>I used to do standup comedy. I went to a standup comedy school in San Francisco.</p>
 
   <hr>
