--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I've been to Tanzania three times and I'm currently learning Swahili, the language most widely spoken in the country.</p>
+  <p>I have been to Tanzania three times and I'm currently learning Swahili, the language most widely spoken in the country.</p>
 
   <hr>
 
