--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I've been working on music for the past 5 or so years in a band with a couple of friends. We've been soundtracked in art films and have all of our music on different streaming services.</p>
+  <p>I have been working on music for the past 5 or so years in a band with a couple of friends. We've been soundtracked in art films and have all of our music on different streaming services.</p>
 
   <hr>
 
