--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I collect vinyls & records. I have an Audio Technica Lp 120, and I'm always hunting for rare records.</p>
+  <p>I collect vinyls and records. I have an Audio Technica Lp 120, and I'm always hunting for rare records.</p>
 
   <hr>
 
