--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I love cattle ponds, the more disgusting, the better! I'm currently running a study for the State Fish & Wildlife testing a new type of trap to be used to manage invasive American bullfrog populations.</p>
+  <p>I love cattle ponds, the more disgusting, the better! I'm currently running a study for the State Fish and Wildlife testing a new type of trap to be used to manage invasive American bullfrog populations.</p>
 
   <hr>
 
