--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>I play 5 instruments: piano, 3 types of saxophones, and cello, And I also sing.</p>
+  <p>I play 5 instruments: piano, 3 types of saxophones, and cello, and I also sing.</p>
 
   <hr>
 
