--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ title: "Something Unique"
 
   <hr>
 
-  <p>At night, after cleaning up dinner and doing my chores, I go into the garage at my house, and I just sit and listen to podcasts before I go to bed. I usually stay there until 1 AM, and then go straight to bed.</p>
+  <p>At night, after cleaning up dinner and doing my chores, I go into the garage at my house, and I just sit and listen to podcasts before I go to bed. I usually stay there until 1am, and then go straight to bed.</p>
 
   <hr>
 
